# ds_motion_generator

./: .gitignore  .rosinstall  .travis.yml  CMakeLists.txt  Default.perspective  README.md  dependencies.rosinstall  package.xml
cfg/: CCDynamics_params.cfg  CYCLE_params.cfg  LINEAR_params.cfg  PPOscilate_params.cfg  SED_params.cfg  SWIPE_params.cfg  lagsDS_params.cfg  lpvDS_params.cfg  seDS_params.cfg
config/: DS0.yaml  DS1_params.yaml  PPOscilation.yml  TL_att_1.yml  TL_att_2.yml  TL_att_3.yml  TL_att_4.yml  TL_limits.yml  cpr_backward.yml  cpr_backward.yml~  cpr_backward_excitation.yml  cpr_dummy_left.yml  cpr_dummy_right.yml  cpr_dummy_right.yml~  cpr_forward.yml  cpr_forward.yml~  cpr_forward_excitation.yml  cpr_place_left.yml  cpr_place_left.yml~  cpr_place_right.yml  cpr_place_right.yml~  cycle_ccw.yml  cycle_cw.yml  dummy_sed.yml~  free_ws.yml  linear_motion.yml  mySED.yml  polish_wood.yml  push_down.yml  s1_reach_GMM.yml  s1_roll_GMM.yml  s2_grate_GMM.yml  s2_swipe_GMM.yml  s3_flip_GMM.yml  s3_roll_GMM.yml  s4_back_GMM.yml  simple_ds.yml  swipe_left.yml  swipe_right.yml
config/Convertor/: SED_yml_convertor.m
config/analytic/: PPOscilation.yml  cycle_ccw.yml  swipe_left.yml
config/analytic_DS/: PPOscilation.yml  linear_motion.yml  swipe_left.yml  swipe_right.yml
config/cpr_4tasks/: cpr_drill_front_down.yml  cpr_drill_front_up.yml  cpr_reach_front.yml  cpr_reach_left.yml  cpr_reach_right.yml  cpr_retreat.yml
config/learned/: Curve_go_left.yml  Curve_go_right.yml  Curve_up.yml  push_down.yml
config/learned_DS/lagsDS/KUKA-AngleShape-LAGS/: KUKA-AngleShape-LAGS.yml
config/learned_DS/lagsDS/KUKA-AngleShape-LAGS-OLD/: GPR_model.txt  KUKA-AngleShape-LAGS.yml
config/learned_DS/lagsDS/KUKA-KhameshShape-LAGS/: KUKA-KhameshShape-LAGS.yml
config/learned_DS/lagsDS/KUKA-KhameshShape-LAGS-OLD/: GPR_model.txt
config/learned_DS/lagsDS/iCub-Narrow-Passage-LAGS/: GPR_model.txt  iCub-Narrow-Passage-LAGS.yml
config/learned_DS/lagsDS/iCub-Object-Conveyor-LAGS/: GPR_model.txt  iCub-Object-Conveyor-LAGS.yml
config/learned_DS/lpvDS/: 2D-W-Nav.yml  3D-CShape-bottom.yml  CShape-bottom-pqlf.yml  CShape-top-pqlf.yml  KUKA-AngleShape-large.yml  KUKA-AngleShape.yml  KUKA-CShape.yml  KUKA-KhameshShape.yml  iCub-Cshape-Loco.yml  iCub-Line-Loco.yml  iCub-Linear-Loco.yml  iCub-Linear1-Loco.yml  iCub-Linear2-Loco.yml  iCub-Narrow-Passage.yml  iCub-Object-Conveyor.yml  sink-pqlf.yml  via-point-qlf.yml
config/learned_DS/seDS/: 3D-CShape-bottom.yml  3D-pick-box_seds-2.yml  3D-pick-box_seds.yml  Cshape-pick_seds.yml  Curve_go_left.yml  Curve_go_right.yml  cube-pick_seds.yml  free_ws.yml  push_down.yml
config/mocap/: mocap.yml
include/: CycleMotionGenerator.h  DSMotionGenerator.h  LinearMotionGenerator.h  SwipeMotionGenerator.h  targetTracker.h
include/analytic_DS/: CycleMotionGenerator.h  LinearMotionGenerator.h  PPOscilateMotionGenerator.h  SwipeMotionGenerator.h
include/learned_DS/: DSMotionGenerator.h  lagsDSMotionGenerator.h  lpvDSMotionGenerator.h  seDSMotionGenerator.h
launch/: cpr_ds_motionGenerator.launch  loadUR10_linearDS_motionGenerator.launch  loadUR10_ppOscDS_motionGenerator.launch  loadUR10_seDS_motionGenerator.launch  load_DS_motionGenerator.launch  load_lagsDS_motionGenerator.launch  load_linearDS_motionGenerator.launch  load_lpvDS_motionGenerator.launch  load_ppOscDS_motionGenerator.launch  load_seDS_motionGenerator.launch  load_swipeDS_motionGenerator.launch  test_moving_target.launch
nodes/: PPOscilate_motionGenerator_node.cpp
src/: CycleMotionGenerator.cpp  DSMotionGenerator.cpp  LinearMotionGenerator.cpp  Linear_motionGenerator_node.cpp  PPOscilateMotionGenerator.cpp  PPOscilate_motionGenerator_node.cpp  SwipeMotionGenerator.cpp  active_motionGenerator_node.cpp  cycle_motionGenerator_node.cpp  lagsDS_motionGenerator_node.cpp  lpvDS_motionGenerator_node.cpp  seDS_motionGenerator_node.cpp  swipe_motionGenerator_node.cpp  target_tracker.cpp  target_tracking_node.cpp
src/analytic_DS/: CycleMotionGenerator.cpp  LinearMotionGenerator.cpp  PPOscilateMotionGenerator.cpp  SwipeMotionGenerator.cpp
src/learned_DS/: lagsDSMotionGenerator.cpp  lpvDSMotionGenerator.cpp  seDSMotionGenerator.cpp
